[gd_scene load_steps=2 format=3 uid="uid://bi1sn7bfa2j2"]

[ext_resource type="Script" path="res://RevealLayer.gd" id="1_mv2l6"]

[node name="RevealLayer" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mv2l6")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TopAnswerLayerHBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/TopAnswerLayerHBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "hey
"

[node name="RichTextLabel2" type="RichTextLabel" parent="VBoxContainer/TopAnswerLayerHBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="RichTextLabel3" type="RichTextLabel" parent="VBoxContainer/TopAnswerLayerHBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="RichTextLabel4" type="RichTextLabel" parent="VBoxContainer/TopAnswerLayerHBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="BottomAnswerLayerHBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="RichTextLabel5" type="RichTextLabel" parent="VBoxContainer/BottomAnswerLayerHBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="RichTextLabel6" type="RichTextLabel" parent="VBoxContainer/BottomAnswerLayerHBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="RichTextLabel7" type="RichTextLabel" parent="VBoxContainer/BottomAnswerLayerHBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="RichTextLabel8" type="RichTextLabel" parent="VBoxContainer/BottomAnswerLayerHBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
