extends Control

@onready var rich_text_label: RichTextLabel = %RichTextLabel
@onready var rich_text_label_2: RichTextLabel = %RichTextLabel2
@onready var rich_text_label_3: RichTextLabel = %RichTextLabel3
@onready var rich_text_label_4: RichTextLabel = %RichTextLabel4
@onready var rich_text_label_5: RichTextLabel = %RichTextLabel5
@onready var rich_text_label_6: RichTextLabel = %RichTextLabel6
@onready var rich_text_label_7: RichTextLabel = %RichTextLabel7
@onready var rich_text_label_8: RichTextLabel = %RichTextLabel8
